# -*- coding: utf-8 -*-

2009-05-12  Daniel Berger  <djberg96@gmail.com>

   * lib/rubygems/remote_fetcher.rb:  Fixed the download method in the
     remote_fetcher.rb file so that it handles local installs on MS
     Windows when using explicit paths that aren't on the 'C:' drive.
     Bug #25882 by Lars Christensen.
   * lib/rubygems/commands/update_command.rb:  Replaced deprecated
     Gem::SourceIndex method 'search' with 'find_name' in the 'execute'
     method.

2009-05-07  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/commands/query_command.rb:  Support prerelease version
	  listing (--prerelease), list locally installed prereleases.
	* lib/rubygems/source_info_cache.rb:  Gem::SourceInfoCache is
	  officially unsupported, maintaining its tests is hard.
	* lib/rubygems/source_index.rb:  Add #all_gems, fix #remove_spec,
	  #search to work with it.  Prerelease gems can now be used.

2009-05-04  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/rubygems_version.rb: 1.3.3.
	* doc/release_notes/rel_1_3_3.rdoc:  RubyGems 1.3.3 release notes.
	* lib/rubygems/specification.rb:  Default has_rdoc to true, ignore
	  its value.
	* lib/rubygems/doc_manager.rb:  Always generate RDoc regardless of
	  #has_rdoc?
	* lib/rubygems.rb:  Raise Gem::LoadError if Kernel#gem fails due to
	  previously-loaded gem.  Bug reported by Alf Mikula.

2009-05-02  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/commands/server_command.rb:  Allow port names with
	  --port.
	* lib/rubygems/requirement.rb:  Match prerelease versions and ~>
	  correctly.  Patch #25759 by Yossef Mendelssohn.

2009-05-01  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/specification.rb:  Check bindir for executables, not
	  root.  Bug reported by David Chelimsky.  Remove Time.today, no way
	  to override it before RubyGems loads.  Bug #25564 by Emanuele
	  Vicentini.  Raise Gem::Exception for #installation_path when not
	  installed.  Bug #25741 by Daniel Berger.  Don't error in #validate